message RoomPosition {
    required uint32 x = 1;
    required uint32 y = 2;
    required string roomName = 3;
}
